--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^8.0.2",
     "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
-    "axios": "^0.27.2"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
